--- a/.github/workflows/flujosubida.yml
+++ b/.github/workflows/flujosubida.yml
@@ -35,3 +35,10 @@ jobs:
           echo "Mi nombre es: ${{ env.nombres }}"
           echo "Mi apellido es: ${{ env.apellidos }}"
           echo "Mi edad es: ${{ env.edad }}"
+
+       # Mis datos generales
+      - name: datos generales
+        run: |
+          echo "Impresión de mis datos generales:"
+          echo "carrera de ingeniería de sistemas"
+          
