--- a/.github/workflows/flujosubida.yml
+++ b/.github/workflows/flujosubida.yml
@@ -20,6 +20,9 @@ jobs:
       apellidos: "Garcia Siancas"
       edad: 29
 
+      user: ${{ secrets.USER }}
+      password: ${{ secrets.PASSWORD }}
+
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
@@ -41,4 +44,11 @@ jobs:
         run: |
           echo "Impresión de mis datos generales:"
           echo "carrera de ingeniería de sistemas"
+
+
+       # Impresión de mi variables secretas
+      - name: variables de entorne secretas
+        run: |
+          echo "Mi usuario es: ${{ env.user }}"
+          echo "Mi contraseña es: ${{ env.password }}"
           
